--- a/force-app/test/default/classes/SummitEventsRtfLinkPipeline_TEST.cls
+++ b/force-app/test/default/classes/SummitEventsRtfLinkPipeline_TEST.cls
@@ -19,11 +19,16 @@ public with sharing class SummitEventsRtfLinkPipeline_TEST {
         String namespace = SummitEventsNamespace.getNamespace();
 
         String rtfUrl = '<p><img src="https://example.force.com/sfc/servlet.shepherd/version/download/'
-            + cv.Id + '?versionId=' + cv.Id + '" alt="test"></p>';
+            + cv.Id + '?versionId=' + cv.Id + '" alt="test"></img></p>';
 
         Summit_Events__c se = new Summit_Events__c();
         se.put(namespace + 'Event_Full_Text__c', rtfUrl);
+        se.put(namespace + 'Event_Name__c', 'Test Event');
+        se.put(namespace + 'Event_Status__c', 'Active');
+        se.put(namespace + 'Name', 'Test Event');
         insert se;
+        se = [SELECT Event_Full_Text__c,Event_Name__c,Event_Status__c,Name FROM Summit_Events__c WHERE Id = :se.Id];
+
 
         Map<Id, SObject> newMap = new Map<Id, SObject>{ se.Id => se };
 
@@ -33,9 +38,11 @@ public with sharing class SummitEventsRtfLinkPipeline_TEST {
         Test.stopTest();
 
         Summit_Events__c updated = [
-            SELECT Event_Full_Text__c FROM Summit_Events__c WHERE Id = :se.Id
+            SELECT Event_Full_Text__c,Event_Name__c,Event_Status__c,Name FROM Summit_Events__c WHERE Id = :se.Id
         ];
+        ContentDistribution cd = [SELECT Id, DistributionPublicUrl FROM ContentDistribution WHERE ContentVersionId = :cv.Id LIMIT 1];
         System.assert(!updated.Event_Full_Text__c.contains('versionId=068'));
         System.assert(updated.Event_Full_Text__c.contains('https://'));
+        System.assert(updated.Event_Full_Text__c.contains(cd.DistributionPublicUrl));
     }
 }
